force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <description>Object that contains the APLAC Membership status related to a contact, licensee and work centre code.</description>
    <label>Membership</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>