force-app/main/default/objects/Membership__c/fields/ACN_formula__c.field-meta.xml
<CustomField>
    <fullName>ACN_formula__c</fullName>
    <description>To display the ACN of the Parent Account</description>
    <formula>Account__r.ACN__c</formula>
    <label>ACN</label>
    <type>Text</type>
</CustomField>