force-app/main/default/objects/Membership__c/fields/APLAC_Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>APLAC_Welcome_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if the APLAC Welcome Email has been sent.</description>
    <inlineHelpText>Has the APLAC Welcome Email been sent?</inlineHelpText>
    <label>{hidden} APLAC Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>