force-app/main/default/objects/Membership__c/fields/Assignment_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To display confirmation that the Assignment has been confirmed and Switch On process can occur</description>
    <inlineHelpText>To display confirmation that the Assignment has been confirmed and Switch-On process can occur</inlineHelpText>
    <label>Assignment Confirmed</label>
    <type>Checkbox</type>
</CustomField>