force-app/main/default/objects/Membership__c/fields/AUSTRAC_Expiry_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>AUSTRAC_Expiry_Date_Formula__c</fullName>
    <description>Calculation for the expiry of this registration record</description>
    <formula>if((
OR(((MOD(YEAR(AUSTRAC_registration_date__c),4)=0)&amp;&amp;(MONTH(AUSTRAC_registration_date__c)&gt;2)),((MOD(YEAR(AUSTRAC_registration_date__c),4)=1)&amp;&amp;(MONTH(AUSTRAC_registration_date__c)&lt;=2)))),((AUSTRAC_registration_date__c) +1095),((AUSTRAC_registration_date__c) +1096))</formula>
    <inlineHelpText>Calculation for the expiry of this registration record</inlineHelpText>
    <label>AUSTRAC Expiry Date</label>
    <type>Date</type>
</CustomField>