force-app/main/default/objects/Membership__c/fields/ContactMailingAddr__c.field-meta.xml
<CustomField>
    <fullName>ContactMailingAddr__c</fullName>
    <description>Value retriever for merge field in Email templates.</description>
    <formula>TEXT(Contact__r.Salutation) &amp; &quot; &quot; &amp;  Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName &amp; BR()
&amp; Contact__r.MailingStreet &amp;
BR() 
&amp; Contact__r.MailingCity   &amp; &quot; &quot;
&amp; Contact__r.MailingState &amp; &quot; &quot;
&amp; Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>{hidden} ContactMailingAddr</label>
    <type>Text</type>
</CustomField>