force-app/main/default/objects/Membership__c/fields/Last_Confirmation_email_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Confirmation_email_date__c</fullName>
    <description>To display the date the last confirmation email was sent by the system - updated by the process builder</description>
    <label>Last Confirmation email date</label>
    <type>Date</type>
</CustomField>