force-app/main/default/objects/Membership__c/fields/Last_Confirmation_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Confirmation_email_sent__c</fullName>
    <description>To display which was the last confirmation email sent to the org</description>
    <label>Last Confirmation email sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>