force-app/main/default/objects/Membership__c/fields/S75_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>S75_Returned_Date__c</fullName>
    <description>Date it changed to the S75 Status “Returned”</description>
    <inlineHelpText>The date the S75 status was updated to Returned</inlineHelpText>
    <label>S75 Returned Date</label>
    <type>Date</type>
</CustomField>