force-app/main/default/objects/Membership__c/fields/WCC__c.field-meta.xml
<CustomField>
    <fullName>WCC__c</fullName>
    <label>WCC</label>
    <length>225</length>
    <type>Text</type>
</CustomField>