force-app/main/default/objects/Membership__c/recordTypes/APLAC_Membership.recordType-meta.xml
<RecordType>
    <fullName>APLAC_Membership</fullName>
    <active>true</active>
    <description>to store the APLAC Memberships for a LPO where appropriate</description>
    <label>APLAC Membership</label>
</RecordType>