force-app/main/default/objects/Membership__c/recordTypes/AUSTRAC_Registration.recordType-meta.xml
<RecordType>
    <fullName>AUSTRAC_Registration</fullName>
    <active>true</active>
    <description>AUSTRAC Registration membership</description>
    <label>AUSTRAC Registration</label>
</RecordType>