force-app/main/default/objects/Membership__c/validationRules/APLAC_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>APLAC_required_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(RecordType.DeveloperName = &apos;APLAC_Membership&apos;, RecordTypeId = null),  
 NOT(TEXT(Status__c) == &apos;Ineligible&apos;),
 OR(
  ISBLANK(TEXT(Member_Type__c)),
  ISBLANK(TEXT(Licensee_Type__c)),
  ISBLANK(Date_Signed__c),
  ISBLANK(ABN__c),
  ISBLANK(WCC__c)
 )
)</errorConditionFormula>
    <errorMessage>Member Type, License Type, Date Signed, ABN, WCC are required</errorMessage>
</ValidationRule>