force-app/main/default/objects/Membership__c/validationRules/AUSTRAC_type_needs_to_be_on_Organisation.validationRule-meta.xml
<ValidationRule>
    <fullName>AUSTRAC_type_needs_to_be_on_Organisation</fullName>
    <active>true</active>
    <description>AUSTRAC registration needs to be only set up on an Organisation record type on the Organisation object</description>
    <errorConditionFormula>RecordType.Name = &apos;AUSTRAC Registration&apos; &amp;&amp;
Account__r.Record_Type_Id__c &lt;&gt; &apos;01290000000VkR9AAK&apos;</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>AUSTRAC registration needs to be set up at Parent Organisation level</errorMessage>
</ValidationRule>