force-app/main/default/objects/Membership__c/validationRules/Facility_WCC.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_WCC</fullName>
    <active>true</active>
    <description>WCC should match the account license&apos;s parent facility WCC</description>
    <errorConditionFormula>(RecordType.DeveloperName =&apos;APLAC_Membership&apos;  || RecordTypeId = null) &amp;&amp;
WCC__c   &lt;&gt;   Parent_Lic_Facility_WCC__c</errorConditionFormula>
    <errorDisplayField>WCC__c</errorDisplayField>
    <errorMessage>Error: Entered WCC should match the account license&apos;s facility WCIS Code.Please try again.</errorMessage>
</ValidationRule>