force-app/main/default/objects/Membership__c/validationRules/IneligibleReason_mandatory_on_ineligible.validationRule-meta.xml
<ValidationRule>
    <fullName>IneligibleReason_mandatory_on_ineligible</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name &lt;&gt; &apos;AUSTRAC Registration&apos; &amp;&amp;
ISPICKVAL(Ineligible_reason__c, &apos;&apos;) &amp;&amp;
Ineligible__c</errorConditionFormula>
    <errorDisplayField>Ineligible_reason__c</errorDisplayField>
    <errorMessage>Ineligible reason must be selected when Ineligible is ticked</errorMessage>
</ValidationRule>