force-app/main/default/objects/Membership__c/validationRules/No_registration_record_for_blacklist_org.validationRule-meta.xml
<ValidationRule>
    <fullName>No_registration_record_for_blacklist_org</fullName>
    <active>true</active>
    <description>Can&apos;t create a new registration record for a blacklisted organisation</description>
    <errorConditionFormula>RecordType.Name = &apos;AUSTRAC Registration&apos; &amp;&amp;
Account__r.Western_Union_Blacklisted__c = TRUE</errorConditionFormula>
    <errorMessage>Can&apos;t create a new registration record for a blacklisted organisation</errorMessage>
</ValidationRule>