force-app/main/default/objects/Membership__c/listViews/Expired_Membership.listView-meta.xml
<ListView>
    <fullName>Expired_Membership</fullName>
    <columns>NAME</columns>
    <columns>Member_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>WCC__c</columns>
    <columns>ABN__c</columns>
    <columns>Account__c</columns>
    <columns>APLAC_Member_Referral__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Membership</label>
</ListView>