force-app/main/default/objects/Membership__c/listViews/Expiring_AUSTRAC_Registrations.listView-meta.xml
<ListView>
    <fullName>Expiring_AUSTRAC_Registrations</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Previous_registration_expiry__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Re_reg_record_should_create__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Membership__c.AUSTRAC_Registration</value>
    </filters>
    <filters>
        <field>Previous_registration_expiry__c</field>
        <operation>equals</operation>
        <value>NEXT_N_MONTHS:12</value>
    </filters>
    <filters>
        <field>AUSTRAC_Expiry_Date_Formula__c</field>
        <operation>equals</operation>
        <value>NEXT_N_MONTHS:12</value>
    </filters>
    <label>Expiring AUSTRAC Registrations</label>
</ListView>