force-app/main/default/objects/Membership__c/listViews/Workforce_Integrity_team_Membership.listView-meta.xml
<ListView>
    <fullName>Workforce_Integrity_team_Membership</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Licensee__c</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Workforce Integrity team</label>
    <queue>Workforce_Integrity_team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>